[package]
name = "sohfin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.74", default-features = false }
http-body-util = "0.1.0-rc.3"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
pretty_env_logger = "0.5.0"
bytes = "1.5.0"
serde = { version = "1.0.189", features = ["derive"] }
chrono = { version = "0.4.31", features  = ["serde"] }
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
futures-util = "0.3.28"
url = "2.4.1"
bigdecimal = "0.4.2"
sqlx = { version = "0.7.2", features = [ "mysql", "runtime-tokio", "uuid", "chrono", "bigdecimal" ] }
sqlx-mysql = "0.7.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
num-bigint = "0.4.4"
